--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             
             <div class="input-row">
-                <label for="height" class="input-text">Rašykite ūgį (m):</label>
+                <label for="height" class="input-text">Rašykite ūgį (cm):</label>
                 <input id="height" type="number" class="input-text">
             </div>
             
